# regextester

./: CMakeLists.txt  README.md  meson.build
data/: CMakeLists.txt  com.github.artemanufrij.regextester.appdata.xml  com.github.artemanufrij.regextester.appdata.xml.in  com.github.artemanufrij.regextester.desktop  com.github.artemanufrij.regextester.desktop.in  meson.build
data/icons/: meson.build
debian/: changelog  control
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.artemanufrij.regextester.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.mo  de.po  dv.po  dz.po  (+157 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
schemas/: CMakeLists.txt  com.github.artemanufrij.regextester.gschema.xml  meson.build
src/: Application.vala  CMakeLists.txt  MainWindow.vala  Settings.vala  meson.build
src/Objects/: GroupItem.vala
src/Widgets/: MatchItem.vala
