#install (FILES com.github.artemanufrij.metronome.desktop DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/applications)
#install (FILES com.github.artemanufrij.metronome.appdata.xml DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/metainfo)


install (FILES icons/regex_match_first.svg DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/${CMAKE_PROJECT_NAME}/icons)
install (FILES icons/regex_match_second.svg DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/${CMAKE_PROJECT_NAME}/icons)

